--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,12 @@ cmake_minimum_required(VERSION 3.0)
 project(echo-server)
 
 add_executable(${PROJECT_NAME}
-  src/server.c)
+  src/server.c
+  src/socket.c)
 
 add_executable(client
-  src/client.c)
+  src/client.c
+  src/socket.c)
 
 if(WIN32)
   target_link_libraries(${PROJECT_NAME} ws2_32)
