--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,11 @@ add_executable(${PROJECT_NAME}
   src/server.c
   src/socket.c)
 
-add_executable(client
+add_executable(echo-client
   src/client.c
   src/socket.c)
 
 if(WIN32)
   target_link_libraries(${PROJECT_NAME} ws2_32)
-  target_link_libraries(client ws2_32)
+  target_link_libraries(echo-client ws2_32)
 endif()
